[gd_scene load_steps=4 format=3 uid="uid://bhbre43jx3la6"]

[ext_resource type="Script" path="res://scripts/menu/main_menu.gd" id="1_48y4a"]
[ext_resource type="Texture2D" uid="uid://b2gyy6j7gnec" path="res://assets/board/wood-1700562_1920.png" id="2_tnhi0"]
[ext_resource type="Theme" uid="uid://b6vsi06ylv2at" path="res://scripts/styles/main_menu.tres" id="3_5pa7g"]

[node name="MainMenu" type="Node"]
script = ExtResource("1_48y4a")
settingsPath = "res://scripts/menu/settings_menu.tscn"
collectionPath = "res://scripts/menu/collection_menu.tscn"
mainPath = "res://scripts/main.tscn"

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_tnhi0")
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 112.0
offset_top = 243.0
offset_right = 735.0
offset_bottom = 960.0
theme = ExtResource("3_5pa7g")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("3_5pa7g")
alignment = 1

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_5pa7g")
text = "Play (Test Scene)"

[node name="MultiplayerButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Multiplayer"

[node name="CollectionButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Collection"

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit game"

[connection signal="pressed" from="MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CollectionButton" to="." method="_on_collection_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
